# ctf3-gameserver

./: .editorconfig  .gitignore  Cargo.toml  README.md  ctf3.example.toml  rustfmt.toml
migrations/: 20230618032543_initial.down.sql  20230618032543_initial.up.sql
migrations/2019-04-20-040843_initial/: down.sql  up.sql
src/: check_up.rs  config.rs  core.rs  db.rs  flag_io.rs  game.rs  key.rs  lib.rs  main.rs  models.rs  schema.rs  service.rs  setup_logging.rs  util.rs  utils.rs
src/controllers/: flag.rs  mod.rs  scoreboard.rs
src/dal/: checkup.rs  flag.rs  mod.rs  team.rs  tick.rs
src/web/: mod.rs  scoreboard.html  scoreboard.rs  submit_flag.rs  util.html  utils.rs
