[package]
name = "gameserver"
version = "0.1.0"
authors = ["Michael Zhang <iptq@protonmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.14"
diesel = { version = "1.4", features = ["postgres", "extras"] }
diesel_migrations = "1.4"
env_logger = "0.6"
futures = "0.1.26"
hmac = "0.7"
lazy_static = "1.0"
log = "0.4"
r2d2 = "0.8"
rand = "0.6"
serde = "1.0"
serde_derive = "1.0"
sha2 = "0.8"
structopt = "0.2"
tera = "1.0.0-beta.4"
tokio = "0.1"
tokio-process = "0.2"
tokio-threadpool = "0.1"
tokio-timer = "0.2.10"
toml = "0.5"
warp = "0.1"
