[package]
name = "gameserver"
version = "0.1.0"
authors = ["Michael Zhang <iptq@protonmail.com>"]
edition = "2018"

[dependencies]
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
diesel = { version = "2.1", features = ["postgres", "extras"] }
diesel_migrations = "2.1"
env_logger = "0.10"
futures = "0.3.28"
hmac = "0.12"
lazy_static = "1.4"
log = "0.4"
r2d2 = "0.8"
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
sha2 = "0.10"
structopt = "0.3"
tera = "1.19.0"
tokio = { version = "1", features = ["full"] }
tokio-process = "0.2"
tokio-threadpool = "0.1"
tokio-timer = "0.2.13"
toml = "0.7"
warp = "0.3"
