[package]
name = "gameserver"
version = "0.1.0"
authors = ["Michael Zhang <iptq@protonmail.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.71"
axum = "0.6.18"
chrono = { version = "0.4", features = ["serde"] }
derive_more = "0.99"
env_logger = "0.10"
futures = "0.3.28"
hmac = "0.12"
lazy_static = "1.4"
log = "0.4"
r2d2 = "0.8"
rand = "0.8"
serde = { version = "1.0.164", features = ["derive"] }
sha2 = "0.10"
sqlx = { version = "0.6.3", features = ["runtime-tokio-rustls", "sqlite"] }
structopt = "0.3"
tera = "1.19.0"
tokio = { version = "1.28.2", features = ["full"] }
tokio-threadpool = "0.1"
tokio-timer = "0.2.13"
toml = "0.7"
warp = "0.3"
